# puppet

./: .gitignore  Cargo.toml  duckdb.db  rustfmt.toml
.github/workflows/: rust.yml
app/api/: Cargo.toml
app/api/examples/: chat.rs
app/api/src/: config.rs  conversation.rs  main.rs  web.rs
app/api/src/conversation/: controller.rs  repository.rs
app/cli/: Cargo.toml
app/cli/src/: agent.rs  command.rs  config.rs  main.rs
app/cli/src/command/: chat.rs  complete.rs  completion.rs
app/proxy/: Cargo.toml
app/proxy/src/: main.rs  proxy.rs
archive/: azure_tts.rs  chat.rs  embedding.rs  gcloud_tts.rs  gemini.rs  gemini_api.rs  tts.rs
archive/proxy/: Cargo.toml
archive/proxy/src/: config.rs  main.rs  proxy.rs
lib/agent/: Cargo.toml
lib/agent/src/: agent.rs  config.rs  function.rs  lib.rs  openai.rs
lib/agent/src/openai/: chat.rs  chat_api.rs  function.rs  session.rs
lib/framework/: Cargo.toml
lib/framework/src/: http_client.rs  json.rs  lib.rs  task.rs  web.rs
lib/framework/src/web/: error.rs  server.rs
lib/openai/: Cargo.toml
lib/openai/examples/: chat.rs
lib/openai/src/: chat.rs  chat_api.rs  embedding.rs  function.rs  lib.rs
src/: azure.rs  bot.rs  chatgpt.rs  command.rs  config.rs  gcloud.rs  llm.rs  main.rs  openai.rs  provider.rs  tts.rs  util.rs
src/azure/: chatgpt.rs  chatgpt_api.rs  tts.rs
src/bot/: config.rs  function.rs  handler.rs
src/command/: chat.rs  complete.rs  completion.rs  generate_zsh_completion.rs  server.rs  speak.rs
src/gcloud/: api.rs  gemini.rs  gemini_api.rs  synthesize.rs  synthesize_api.rs  tts.rs  vertex.rs
src/llm/: config.rs  function.rs
src/openai/: api.rs  chat.rs  chat_api.rs  chat_completion.rs  chatgpt.rs  chatgpt_api.rs
src/tts/: config.rs
src/util/: console.rs  exception.rs  http_client.rs  json.rs  path.rs
