[workspace]
resolver = "3"
members = [ "app/*", "lib/*" ]

[workspace.dependencies]
framework = { path = "lib/framework" }
openai = { path = "lib/openai" }

tracing = "*"
tracing-subscriber = "*"
anyhow = "*"

clap = { version = "*", features = ["derive"] }
clap_complete = "*"

serde = { version = "*", features = ["derive", "rc"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["rt"] }
axum = { version = "*", features = ["macros"] }
reqwest = { version = "*", features = ["stream"] }

futures = "*"
bytes = "*"

uuid = { version = "*", features = ["v7"] }
chrono = "*"
base64 = "*"
