[workspace]
resolver = "3"
members = [ "app/*", "lib/*" ]

[workspace.dependencies]
framework = { path = "lib/framework" }
openai = { path = "lib/openai" }
agent = { path = "lib/agent" }

tracing = "*"
tracing-subscriber = "*"
anyhow = "*"

clap = { version = "*", features = ["derive"] }
clap_complete = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["rt"] }
tokio-stream = { version = "*" }
axum = { version = "*", features = ["macros"] }
reqwest = { version = "*", features = ["stream", "socks"] }

futures = "*"
bytes = "*"

uuid = { version = "*", features = ["v7"] }
chrono = { version = "*", features = ["serde"] }
base64 = "*"
