[workspace]
resolver = "3"
members = ["app/*", "lib/*"]

[workspace.dependencies]
framework   = { git = "https://github.com/neowu/core_rs_workspace" }
openai = { path = "lib/openai" }
agent = { path = "lib/agent" }

tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

clap = { version = "*", features = ["derive"] }
clap_complete = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tokio-stream = { version = "*" }

futures = "*"
bytes = "*"

uuid = { version = "*", features = ["v7"] }
chrono = { version = "*", features = ["serde"] }
base64 = "*"
