[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
framework.workspace = true
openai.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

axum.workspace = true
chrono.workspace = true

duckdb = { version = "*", features = ["bundled", "chrono"] }
