[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
framework.workspace = true
agent.workspace = true

tracing.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

rand = "*"
regex = "*"
glob = "*"
