[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
framework.workspace = true
openai.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
