[package]
name = "framework"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
axum.workspace = true

futures.workspace = true
bytes.workspace = true
chrono.workspace = true
uuid.workspace = true
