[package]
name = "openai"
version = "0.1.0"
edition = "2021"

[dependencies]
framework.workspace = true

tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
futures.workspace = true
bytes.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
